--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body>
     
 <header> 
-    <h1></h1>
-    <nav></nav>
+    <h1>FontIcons</h1>
+    <nav>
+
+    </nav>
 </header>
 <main>
-    <div class="container">
-        <div class="row cards"></div>
+    <div class="container d-flex justify-content-center ">
+        <div class=" cards "></div>
     </div>
 </main>
 
