--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </nav>
 </header>
 <main>
-    <div class="container d-flex justify-content-center ">
-        <div class=" cards "></div>
+    <div class="container  justify-content-center ">
+        <div class="row cards "></div>
     </div>
 </main>
 
